@@ -83,7 +83,7 @@ pageHeader();
     <li>
       <label class="description"><?php echo T_("Expire in total # of days"); ?></label>
       <div>
-	<input name="gn" value="7" class="element text" type="text" maxlength="255" value=""/>
+	<input name="gn" value="<?php echo $defaultGrantTotalDays; ?>" class="element text" type="text" maxlength="255" value=""/>
       </div>
       <p class="guidelines"><small>
 	  <?php
@@ -100,7 +100,7 @@ pageHeader();
     <li>
       <label class="description"><?php echo T_("Expire in total # of days"); ?></label>
       <div>
-	<input name="dn" value="7" class="element text" type="text" maxlength="255" value=""/>
+	<input name="dn" value="<?php echo $defaultTicketTotalDays; ?>" class="element text" type="text" maxlength="255" value=""/>
       </div>
       <p class="guidelines"><small>
 	  <?php
@@ -115,7 +115,7 @@ pageHeader();
     <li>
       <label class="description"><?php echo T_("Expire in # of hours after last dl"); ?></label>
       <div>
-	<input name="hra" value="24" class="element text" type="text" maxlength="255" value=""/>
+	<input name="hra" value="<?php echo $defaultTicketLastDl; ?>" class="element text" type="text" maxlength="255" value=""/>
       </div>
       <p class="guidelines"><small>
 	  <?php
@@ -130,7 +130,7 @@ pageHeader();
     <li>
       <label class="description"><?php echo T_("Expire after # of downloads"); ?></label>
       <div>
-	<input name="dln" value="0" class="element text" type="text" maxlength="255" value=""/>
+	<input name="dln" value="<?php echo $defaultTicketMaxDl; ?>" class="element text" type="text" maxlength="255" value=""/>
       </div>
       <p class="guidelines"><small>
 	  <?php
