@@ -2,6 +2,7 @@ dl 0.9:
 ------------------
 
 * The settings of tickets and grants are now stored independently.
+* Default ticket/grant settings can be specified in the config file.
 * Most ticket and grant options are now moved into an "advanced" panel.
 * Form validation is now also performed in JavaScript.
 * Enlarged the width of the interface to 800px.
